# trading-system

./: .gitignore  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
services/api-gateway/: Dockerfile
services/api-gateway/app/routes/: trades.py
services/scanner-service/: Dockerfile
services/scanner-service/app/: main.py  test_main.py  workflow_starter.py
services/scanner-service/app/market/: candlestick_streams.py  limit_order.py  mark_price_streams.py  test_stop_limit.py  websocket.py
services/scanner-service/app/scanners/: pullback_atr.py
services/scanner-service/app/strategy/: registry.py  signals.py
services/telegram/: Dockerfile
services/telegram/app/: bot.py
services/temporal-worker/: Dockerfile
services/temporal-worker/app/: worker.py
services/temporal-worker/app/activities/: finalize.py
services/temporal-worker/app/workflows/: trade_workflow.py
services/web-app/: .dockerignore  Dockerfile  next.config.ts  package-lock.json
services/web-app/src/app/: globals.css  layout.tsx  page.tsx
shared/config/: auth.py  settings.py
shared/database/: mongo.py
shared/models/: trade_plan.py
shared/temporal/: workflow_starter.py
shared/temporal/activities/: limit_trading.py  market_trading.py  testnet_limit_trading.py
shared/temporal/activities/service/: limit_service.py  market_service.py  trading_service.py
shared/temporal/workflows/: testnet_trade_workflow.py  trade_workflow.py
shared/util/: account.py  atr.py  data_collector.py  decimals.py  exchange_info.py  indicator.py  position.py  stop.py  telegram.py
(+3 files in other folders)
